--- a/Example_TouchScroll/dialog.ui
+++ b/Example_TouchScroll/dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>748</width>
-    <height>504</height>
+    <width>713</width>
+    <height>873</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -78,6 +78,34 @@
    <property name="text">
     <string>PushButton</string>
    </property>
+  </widget>
+  <widget class="TouchScrollAreaWidget" name="scrollArea_5">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>630</y>
+     <width>321</width>
+     <height>191</height>
+    </rect>
+   </property>
+   <property name="widgetResizable">
+    <bool>true</bool>
+   </property>
+   <widget class="QWidget" name="scrollAreaWidgetContents_6">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>319</width>
+      <height>189</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout"/>
+     </item>
+    </layout>
+   </widget>
   </widget>
  </widget>
  <customwidgets>
